[gd_scene load_steps=2 format=2]

[ext_resource path="res://FamilyTree.gd" type="Script" id=1]

[node name="FamilyTree" type="Node2D"]
script = ExtResource( 1 )

[node name="FamilyGen1" type="Node2D" parent="."]
position = Vector2( 0, 30 )

[node name="FamilyGen2" type="Node2D" parent="."]
position = Vector2( 0, 110 )

[node name="FamilyGen3" type="Node2D" parent="."]
position = Vector2( 0, 190 )

[node name="FamilyGen4" type="Node2D" parent="."]
position = Vector2( 0, 270 )

[node name="FamilyGen5" type="Node2D" parent="."]
position = Vector2( 0, 350 )

[node name="FamilyGen6" type="Node2D" parent="."]
position = Vector2( 0, 430 )

[node name="FamilyGen7" type="Node2D" parent="."]
position = Vector2( 0, 510 )
